--- a/index.html
+++ b/index.html
@@ -77,39 +77,38 @@
   <!--serviços pronto-->
 
 
-  <section id="projetos">
+<section id="projetos">
     <h2 id="projetos_titulo">Nossos Projetos</h2>
 
     <div class="grade_projetos">
 
       <article class="cartao_projetos" >
-        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/538650f1-0e14-4bcd-a4f9-d16299cfccae.png" alt="Imagem ilustrativa do projeto plataforma de e-commerce" class="project-image" loading="lazy"/>
+        <img src="src/style/img/serviços de tecnologia.jpeg" alt="Serviços de Tecnologia"> 
         <div class="info_projeto">
-          <h3 class="projetos_titulo">Plataforma de E-commerce</h3>
-          <p class="descricao_projetos">Sistema robusto para vendas online com personalização e integração de pagamentos.</p>
+          <h3 class="projetos_titulo">Serviços de Tecnologia</h3>
+          <p class="descricao_projetos">Desenvolvimento de sites, apps e sistemas sob medida.</p>
         </div>
       </article>
 
       <article class="cartao_projetos" >
-        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/2d30df3f-1866-404a-a9c6-259c73618820.png" alt="Imagem ilustrativa do projeto aplicativo de gestão de tarefas" class="project-image" loading="lazy"/>
+        <img src="src/style/img/Profissionais Especializados.jpeg" alt="Profissionais Especializados">
         <div class="info_projeto">
-          <h3 class="projetos_titulo">App de Gestão de Tarefas</h3>
-          <p class="descricao_projetos">Aplicativo móvel para gerenciamento de atividades com notificações inteligentes.</p>
+          <h3 class="projetos_titulo">Profissionais Especializados</h3>
+          <p class="descricao_projetos">Time experiente em tecnologia, design e inovação.</p>
         </div>
       </article>
 
       <article class="cartao_projetos">
-        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/5aa64625-8d79-4469-aeed-ed4d8b9ad703.png" alt="Imagem ilustrativa do projeto sistema ERP para pequena e média empresa" class="project-image" loading="lazy"/>
+        <img src="src/style/img/duvidas frequentes.png" alt="duvidas frequentes">
         <div class="info_projeto">
-          <h3 class="projetos_titulo">Sistema ERP para PME</h3>
-          <p class="descricao_projetos">Gestão integrada de processos administrativos e financeiros para pequenas empresas.</p>
+          <h3 class="projetos_titulo">Dúvidas Frequentes</h3>
+          <p class="descricao_projetos">Respostas rápidas sobre serviços, prazos e suporte.</p>
         </div>
       </article>
 
     </div>
   </section>
   <!--projetos pronto-->
-
   
   <section id="equipe" aria-labelledby="equipe-title">
     <h2 id="equipe_titulo">Nossa Equipe</h2>
@@ -145,7 +144,7 @@
   <!--equipe pronto-->
 
   
-  <section id="ajuda">
+ <section id="ajuda">
     <h2 id="ajuda_titulo">Ajuda - Perguntas Frequentes</h2>
 
     <div class="ajuda_lista">
@@ -156,13 +155,15 @@
       </details>
 
       <details>
-        <summary>Como posso solicitar um orçamento para meu projeto?</summary>
-        <div class="ajuda_conteudo">Você pode entrar em contato conosco através da seção Contato, preenchendo o formulário ou pelo e-mail indicado para receber um atendimento personalizado.</div>
+        <summary>Como funciona o processo de desenvolvimento?</summary>
+        <div class="ajuda_conteudo">Nosso processo inclui: análise de requisitos, planejamento, desenvolvimento, testes e entrega final com suporte.
+
+</div>
       </details>
 
       <details>
-        <summary>Vocês oferecem suporte pós-implantação dos sistemas?</summary>
-        <div class="ajuda_conteudo">Sim, oferecemos suporte contínuo para garantir a estabilidade e evolução das soluções implementadas.</div>
+        <summary>Vocês oferecem suporte técnico após a entrega?</summary>
+        <div class="ajuda_conteudo">Sim, oferecemos suporte para correções, ajustes e esclarecimento de dúvidas durante o período de garantia. Também disponibilizamos planos de manutenção para melhorias, atualizações e novas funcionalidades.</div>
       </details>
 
       <details>
@@ -177,7 +178,7 @@
 
     </div>
   </section>
-  <!--faq pronto-->
+  <!--ajuda pronto-->
 
 
   <section id="contato">
