alteracao html img

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Lumitech - Empresa de Tecnologia</title>
-<link rel="stylesheet" href="src/lumitech.css">
+<link rel="stylesheet" href="lumitech.css">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 </head>
 <body>
@@ -77,13 +77,13 @@
   <!--serviços pronto-->
 
 
-<section id="projetos">
+ <section id="projetos">
     <h2 id="projetos_titulo">Nossos Projetos</h2>
 
     <div class="grade_projetos">
 
       <article class="cartao_projetos" >
-        <img src="src/style/img/serviços de tecnologia.jpeg" alt="Serviços de Tecnologia"> 
+        <img src="./src/style/img/serviços de tecnologia.jpeg" alt="Serviços de Tecnologia"> 
         <div class="info_projeto">
           <h3 class="projetos_titulo">Serviços de Tecnologia</h3>
           <p class="descricao_projetos">Desenvolvimento de sites, apps e sistemas sob medida.</p>
@@ -91,7 +91,7 @@
       </article>
 
       <article class="cartao_projetos" >
-        <img src="src/style/img/Profissionais Especializados.jpeg" alt="Profissionais Especializados">
+        <img src="./src/style/img/Profissionais Especializados.jpeg" alt="Profissionais Especializados">
         <div class="info_projeto">
           <h3 class="projetos_titulo">Profissionais Especializados</h3>
           <p class="descricao_projetos">Time experiente em tecnologia, design e inovação.</p>
@@ -99,7 +99,7 @@
       </article>
 
       <article class="cartao_projetos">
-        <img src="src/style/img/duvidas frequentes.png" alt="duvidas frequentes">
+        <img src="./src/style/img/duvidas frequentes.png" alt="duvidas frequentes">
         <div class="info_projeto">
           <h3 class="projetos_titulo">Dúvidas Frequentes</h3>
           <p class="descricao_projetos">Respostas rápidas sobre serviços, prazos e suporte.</p>
@@ -109,6 +109,7 @@
     </div>
   </section>
   <!--projetos pronto-->
+
   
   <section id="equipe" aria-labelledby="equipe-title">
     <h2 id="equipe_titulo">Nossa Equipe</h2>
@@ -144,7 +145,7 @@
   <!--equipe pronto-->
 
   
- <section id="ajuda">
+  <section id="ajuda">
     <h2 id="ajuda_titulo">Ajuda - Perguntas Frequentes</h2>
 
     <div class="ajuda_lista">
